--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: compile test suite
-        run: gcc ${{matrix.compile_args}} test_ascii_check.c -o test_ascii_check
+        run: >- 
+          gcc -wall -werror 
+          ${{matrix.compile_args}} 
+          test_ascii_check.c -o test_ascii_check
       - name: run tests
         run: ./test_ascii_check
