--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: compile test suite
         run: >- 
-          gcc -wall -werror 
+          gcc -Wall -Werror 
           ${{matrix.compile_args}} 
           test_ascii_check.c -o test_ascii_check
       - name: run tests
