--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
         compile_args:
            - ""
            - "-D ASCII_CHECK_SSE2 -msse2"
+           - "-D ASCII_CHECK_AVX2 -mavx2"
     steps:
       - uses: actions/checkout@v2
       - name: compile test suite
@@ -30,6 +31,7 @@ jobs:
         compile_args:
           - ""
           - "/D ASCII_CHECK_SSE2"
+          - "/D ASCII_CHECK_AVX2"
     steps:
       - uses: actions/checkout@v2
       - name: Set MSVC developer prompt
